2016-04-14 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCerr.c
	* src/SDCCerr.h
	* src/SDCCsymt.c
	  Check tagged anonymous struct/union.

2016-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2492.c:
	  Fix bug #2492.

2016-04-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic14devices.txt,
	  device/non-free/include/pic14/*.h,
	  device/non-free/include/pic16/*.h,
	  device/non-free/lib/pic14/libdev/*.c,
	  device/non-free/lib/pic16/libdev/*.c:
	  Refreshed the device files.

2016-04-12 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/uchar.h,
	  device/include/wchar.h,
	  device/lib/c16rtomb.c,
	  device/lib/mbrtoc16.c,
	  device/lib/mbsinit.c,
	  device/lib/incl.mk,
	  support/regression/tests/wchar.c:
	  Implement c16rtomb(), mbrtoc16(), mbsinit().
	* device/lib/*/mul.s
	  Integer multiplication improvement by Kio (RFE #422).

2016-04-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/lib/pic14/configure.ac,
	  device/lib/pic14/Makefile.in,
	  device/lib/pic14/libm/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in,
	  device/lib/pic14/libsdcc/regular/Makefile.in:
	  Fixed bug: #2482 Link error with pic16f1827

2016-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Enable iy register content tracking optimization.
	* device/include/stdlib.h,
	  device/lib/mbtowc.c,
	  device/lib/incl.mk,
	  support/regression/tests/wchar.c:
	  Implement mbtowc().
	* device/include/wchar.h,
	  device/lib/mbrlen.c:
	  Implement mbrlen().

2016-04-10 Molnar Karoly <molnarkaroly AT users.sf.net>

	* src/pic14/gen.c,
	  src/pic16/gen.c:
	  Fixed typo from "psuedo" to "pseudo".

	* src/pic14/gen.c:
	  Fixed bug in genCall() function: The PAGESEL instructions must
	  be given unconditionally. (In this context: "Each function has
	  its own code section.")

	* src/pic14/pcode.c,
	  src/pic16/pcode.c,